--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5174",
-    "build": "vite build",
+    "build": "NODE_OPTIONS=--max_old_space_size=4096 vite build",
     "preview": "vite preview"
   },
   "dependencies": {
