--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5174",
-    "build": "NODE_OPTIONS=--max_old_space_size=4096 vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,16 +21,19 @@
     "bs58": "^6.0.0",
     "lucide-react": "^0.562.0",
     "qrcode.react": "^4.2.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "vite": "^6.4.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.4.1"
+    "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
