--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "vite --port 5174",
     "build": "vite build",
@@ -21,19 +24,16 @@
     "bs58": "^6.0.0",
     "lucide-react": "^0.562.0",
     "qrcode.react": "^4.2.0",
-    "three": "^0.182.0",
-    "vite": "^6.4.1",
-    "@vitejs/plugin-react": "^4.7.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
-  },
-  "engines": {
-    "node": "24.x"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.4.1"
   }
 }
