--- a/package.json
+++ b/package.json
@@ -3,27 +3,31 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+
   "scripts": {
+    "vercel-build": "npm ci && npm run build",
     "dev": "vite --port 5174",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "bs58": "^6.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "three": "^0.182.0",
     "lucide-react": "^0.562.0",
     "qrcode.react": "^4.2.0",
-    "three": "^0.182.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "bs58": "^6.0.0"
   },
+
   "devDependencies": {
+    "vite": "^6.4.1",
     "@vitejs/plugin-react": "^4.7.0",
-    "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.4.1"
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.23",
+    "@tailwindcss/postcss": "^4.1.18"
   },
+
   "engines": {
     "node": "20.x"
   }
