--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "installCommand": "npm install",
-  "buildCommand": "npm run build",
+  "buildCommand": "npx --yes vite build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "installCommand": "npm ci"
 }
