--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
 
   "scripts": {
-    "dev": "vite --port 5174",
-    "build": "vite build",
-    "preview": "vite preview"
+  "dev": "vite --port 5174",
+  "build": "sh build.sh",
+  "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.3",
