--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
+    "@react-three/drei": "9.88.7",
+    "@react-three/fiber": "8.15.12",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-phantom": "^0.9.28",
     "@solana/wallet-adapter-react": "^0.15.39",
@@ -23,7 +23,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.172.0"
+    "three": "0.153.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -39,4 +39,3 @@
     "node": "20.x"
   }
 }
-
